kubernetes/apps/default/dancers/app/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dancers
  namespace: default
subsets:
- addresses:
  - ip: 192.168.1.22
  ports:
  - port: 5001
