kubernetes/apps/default/dancers/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
  name: dancers
  namespace: default
spec:
  ingressClassName: external
  rules:
    - host: "dancer.solutions"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dancer
                port:
                  number: 80
